--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,111 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://useiconic.com/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
-    
+    <!--This navbar was created with AI, TODO: rewrite -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+            </ul>
+            </div>
+        </div>
+    </nav>
+    <!--This section was created with AI, TODO: rewrite! -->
+    <section id="home" class="pt-5 text-center bg-light" style="height: 100vh;">
+        <div class="container">
+            <h1 class="display-3">Hi, I'm Jack.</h1>
+            <p class="lead">I'm a CS student at Harper College.</p>
+        </div>
+    </section>
+    <section id="projects" >
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="row">
+                <div class="col"></div>
+            </div>
+        </div>
+
+    </section>
+    <!-- This Skills Grid (Bootstrap + Icons) was created with AI. TODO: rewrite! -->
+    <section id="skills" class="py-5 text-center">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="Assets/Icons/html5.svg" alt="HTML5" class="skill-icon" />
+                    <p>HTML</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/css.svg" alt="CSS" class="skill-icon" />
+                    <p>CSS</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/bootstrap.svg" alt="Bootstrap" class="skill-icon" />
+                    <p>Bootstrap</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/javascript.svg" alt="JavaScript" class="skill-icon" />
+                    <p>JavaScript</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/jquery.svg" alt="jQuery" class="skill-icon" />
+                    <p>JQuery</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/nodedotjs.svg" alt="Node.js" class="skill-icon" />
+                    <p>Node.js</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/python.svg" alt="Python" class="skill-icon" />
+                    <p>Python</p>
+                </div>
+
+                <div class="col-md-3">
+                    <img src="Assets/Icons/java.svg" alt="Python" class="skill-icon" />
+                    <p>Java</p>
+                </div>
+                <div class="col-md-3">
+                    <!--TODO: Find a good svg-->
+                    <p>C#</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/java.svg" alt="Python" class="skill-icon" />
+                    <p>C++</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/linux.svg" alt="Python" class="skill-icon" />
+                    <p>Linux</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="Assets/Icons/jupyter.svg" alt="Python" class="skill-icon" />
+                    <p>Jupyter</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Courses: HF: Deep Reinforcement Learning, AI Agents. -->
+    <!-- Contact Form created with AI. TODO: Rewrite! -->
+    <section id="contact" class="py-5 bg-light">
+        <div class="container">
+            <h2>Contact</h2>
+            <form action="https://formspree.io/f/YOUR_ID" method="POST">
+            <input type="email" name="email" placeholder="Your Email" required class="form-control mb-2">
+            <textarea name="message" placeholder="Message" required class="form-control mb-2"></textarea>
+            <button type="submit" class="btn btn-primary">Send</button>
+            </form>
+        </div>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="/JS/index.js"></script>
 </body>
 </html>
